refactor: deepen module layering and readability baseline